# data_ingestion_demo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: demo.sh
src/: __init__.py  atlas_check.py  benchmarks.py  create_indexes.py  fhir_api.py  fhir_data_generator.py  fhir_data_ingestor.py  fhir_queries.py  fhir_search.py  fhir_subscriptions.py  fhir_vector_search.py  sample_ids.py
src/atlas_indexes/: README.md
tests/: __init__.py
